# CrocoDash

./: .buildinfo  .coveragerc  .gitignore  .gitmodules  CITATION.cff  Dockerfile  LICENSE.md  README.md  additional_resources.html  build.sh  data_access.html  datasets.html  demos.html  dev_environment.yml  diagrams.html  docs.html  driver.html  environment.yml  forcing_configurations.html  genindex.html  grid_gen.html  index.html  installation.html  large_data_workflow.html  meta.yaml  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  rcg.html  search.html  searchindex.js  setup.py  structure.html
.doctrees/: additional_resources.doctree  configure_forcings.doctree  data_access.doctree  datasets.doctree  demos.doctree  diagrams.doctree  docs.doctree  driver.doctree  environment.pickle  grid_gen.doctree  index.doctree  installation.doctree  large_data_workflow.doctree  rcg.doctree  structure.doctree
CrocoDash/: assemble_case.py  assemble_case_backup.py  case.py  case_record.py  case_state.py  cli.py  command_manager.py  configurations.py  data_access.py  driver.py  edit_command.py  forcing_configurations.py  grid.py  grid_creator.py  grid_editor.py  grid_gen.py  history_manager.py  logging.py  recipe.py  shareable.py  topo.py  topo_editor.py  unsupported_boundary_conditions.py  utils.py  vgrid.py  vgrid_creator.py  vgrid_editor.py  workflow.py
_sources/: configure_forcings.md  diagrams.rst.txt  index.rst  installation.rst  installation.rst.txt  large_data_workflow.rst.txt  structure.rst
_static/: workflow_diagram
api-docs/: CrocoDash.data_access.html  (+9 more)
(+1749 files in other folders)
